--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,8 @@ runtime/**
 # Local source dump for mechanics (canonicalized copy goes to balatro_mechanics/)
 Balatro_Mechanics_CSV_UPDATED_20260219/
 
+
+# Local scratch (non-reproducible personal notes/temp files)
+local_scratch/
+local_only/
+
