docs: convert all comments and docs to English; add USAGE_GUIDE.md, update paths

--- a/balatro_mechanics/manifest.json
+++ b/balatro_mechanics/manifest.json
@@ -1,6 +1,6 @@
 {
   "generated_at": "2026-02-19T13:26:37.989644+00:00",
-  "source": "D:\\我的\\小丑牌AI\\Balatro_Mechanics_CSV_UPDATED_20260219\\final",
+  "source": "D:\\BalatroAI\\Balatro_Mechanics_CSV_UPDATED_20260219\\final",
   "files": [
     "booster_packs.csv",
     "boss_blinds.csv",
